# C_Project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  rename_project.sh  rename_project_exe.sh
src/: CMakeLists.txt  main.c
